# mxmoe-adapt

./: .gitignore  .source-revision  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: aggregate_config_validation.py  benchmark_fused_moe.py  build_c500_m0_report.py  search_flaggems_configs.py
configs/: c500-config-database.example.json  c500-environment.example.json  workloads.json
docs/: C500实测手册.md  C500开通信息与环境日志表.md  C500租赁与镜像选择.md  交付日志.md  填表短文本.md  技术方案.md  提交前检查清单.md  联系方式.md  项目申报书.md  项目管理.md
results/c500-e928d862973e-20260722/: c500-environment-before.json  c500-environment-final.json  c500-m0-milestone.json  c500-search-space.json  environment-stability-1.json  environment-stability-2.json  flaggems-smoke-fp16.json  reference-smoke-fp16.json  validation-realshape-bf16-aggregate.json  validation-realshape-fp16-aggregate.json
results/c500-e928d862973e-20260722/calibration-default-tile-no-warnings/: summary.json
results/c500-e928d862973e-20260722/search-realshape-t4-e8-h4096-i14336-fp16-safe-baseline/: candidate_02.json  candidate_04.json  candidate_09.json  summary.json
src/mxmoe_adapt/: __init__.py  config_schema.py  dispatch.py  drift.py  environment.py  report.py  route_features.py  search_space.py  trace.py  tuning.py
src/mxmoe_adapt/adapters/: __init__.py  flaggems.py  reference.py  (+1 more)
tests/: test_config_schema.py  test_dispatch.py  test_drift.py  test_environment.py  test_project_integrity.py  test_report.py  test_route_features.py  test_search_space.py  test_tuning.py
(+19 files in other folders)
